derive/test/compile_fail/tuple_transparent.stderr
error: proc-macro derive panicked
 --> compile_fail/tuple_transparent.rs:3:10
  |
3 | #[derive(Value)]
  |          ^^^^^
  |
  = help: message: unsupported attribute `transparent` on struct
